form quick complete

--- a/Front/src/app/landing/pages/quick-forms/quick-forms.component.html
+++ b/Front/src/app/landing/pages/quick-forms/quick-forms.component.html
@@ -207,9 +207,9 @@
                   <mat-select formControlName="personasacargo">
                     <mat-option selected disabled value="">Escoge...</mat-option>
                     <mat-option value="0">Ninguna</mat-option>
-                    <mat-option value="1">1 Persona</mat-option>
-                    <mat-option value="2">2 Personas</mat-option>
-                    <mat-option value="3">3 Personas</mat-option>
+                    <mat-option value="1">Una Persona</mat-option>
+                    <mat-option value="2">Dos Personas</mat-option>
+                    <mat-option value="3">Tres Personas</mat-option>
                     <mat-option value="Mas De 3">Mas De 3 Personas</mat-option>
                   </mat-select>
                   <mat-label><mat-icon>description</mat-icon> <b>Personas A
@@ -289,6 +289,30 @@
                   <mat-label><mat-icon>description</mat-icon><b>Tiempo En
                       Vivienda</b></mat-label>
                 </mat-form-field>
+              </div>
+              <!-- Cuarta Fila -->
+              <div class="row">
+
+                <!-- Ingresos -->
+                <mat-form-field class="form-group col-md-6">
+                  <mat-label>Ingresos</mat-label>
+                  <input matInput formControlName="ingresos" type="number"
+                    class="form-control">
+                  <mat-error *ngIf="campoEsValido('ingresos')">
+                    {{getError('ingresos')}}
+                  </mat-error>
+                </mat-form-field>
+
+                <!-- Egresos-->
+                <mat-form-field class="form-group col-md-6">
+                  <mat-label>Egresos</mat-label>
+                  <input matInput formControlName="egresos" type="number"
+                    class="form-control">
+                  <mat-error *ngIf="campoEsValido('egresos')">
+                    {{getError('egresos')}}
+                  </mat-error>
+                </mat-form-field>
+
               </div>
 
               <a (click)="terceraparte()">Siguiente</a>
@@ -626,12 +650,12 @@
 
 
 
+<!--
 
-
-    <!-- <span>Valid</span>
-<pre>{{ miFormulario.valid }}</pre>
+    <span>Valid</span>
+<pre>{{ miFormulario2.valid }}</pre>
 <br>
 
 <span>Value</span>
-<pre>{{ miFormulario.value | json }}</pre>
+<pre>{{ miFormulario2.value | json }}</pre>
 <br> -->
