--- a/Front/src/app/landing/pages/quick-forms/quick-forms.component.scss
+++ b/Front/src/app/landing/pages/quick-forms/quick-forms.component.scss
@@ -111,7 +111,7 @@ mat-card-title {
 
 .pepe{
   height: 35%;
-  background-image: url("../../../../assets/images/quickloan-unsplash.jpg");
+  background-image: url("/assets/images/quickloan-unsplash.jpg");
   background-size: 100%;
 }
 .titulo{
