--- a/Front/src/app/landing/pages/quickloan/quickloan.component.html
+++ b/Front/src/app/landing/pages/quickloan/quickloan.component.html
@@ -1,6 +1,6 @@
 <!-- Full Page Intro -->
 <div class="view full-page-intro "
-  style="background-image: url('../../../../assets/images/quickloan-unsplash.jpg'); background-repeat: no-repeat; background-size: cover;">
+  style="background-image: url('/assets/images/quickloan-unsplash.jpg'); background-repeat: no-repeat; background-size: cover;">
 
   <!-- Mask & flexbox options-->
   <div class="mask rgba-black-light d-flex justify-content-center align-items-center ">
