--- a/Front/src/app/shared/register-quickloan/register-quickloan.component.html
+++ b/Front/src/app/shared/register-quickloan/register-quickloan.component.html
@@ -57,8 +57,21 @@
       <p> </p>
       <fieldset class="form-check mb-3">
         <input type="checkbox" class="form-check-input" id="checkbox1" formControlName="terminos">
-
-        <a href="../../../assets/pdf/Terminos Y Condiciones - Lendiup.pdf" for="checkbox1" class="form-check-label text-white">Acepto Terminos Y Condiciones</a>
+        <a  class="" for="checkbox1" data-toggle="modal" data-target="#exampleModal">
+          Acepto Terminos Y Condiciones
+        </a>
+      </fieldset>
+      <fieldset class="form-check mb-3">
+        <input type="checkbox" class="form-check-input" id="checkbox2" formControlName="politicas">
+        <a  class="" for="checkbox2" data-toggle="modal" data-target="#exampleModal2">
+          Acepto Politicas De Privacidad
+        </a>
+      </fieldset>
+      <fieldset class="form-check mb-3">
+        <input type="checkbox" class="form-check-input" id="checkbox3" formControlName="habeas">
+        <a  class="" for="checkbox3" data-toggle="modal" data-target="#exampleModal3">
+          Acepto Habeas Data
+        </a>
       </fieldset>
       <!-- <fieldset class="form-check mb-3">
         <input type="checkbox" class="form-check-input" id="checkbox2" formControlName="politicas">
@@ -70,6 +83,9 @@
 
         <a href="../../../assets/pdf/Habeas-Data.pdf" for="checkbox3" class="form-check-label text-white">Acepta Habeas Data</a>
       </fieldset> -->
+
+
+
      <div>
       <button type="button"  (click)="calc(0)" class="mx-3">Atras  <i class="far fa-hand-point-left"></i></button>
         <button type="submit"  [disabled]="miFormulario.invalid"><i class="fa fa-save"></i> Continuar</button>
@@ -84,3 +100,66 @@
 
 </div>
 <!--/.Card-->
+
+
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Terminos y Condiciones</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <embed src="../../../assets/pdf/Terminos Y Condiciones - Lendiup.pdf" frameborder="0" width="100%" height="400px">
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <!-- <button type="button" class="btn btn-primary">Save changes</button> -->
+      </div>
+    </div>
+  </div>
+</div>
+<!-- Modal -->
+<div class="modal fade" id="exampleModal2" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Terminos y Condiciones</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <embed src="../../../assets/pdf/Politica-de-privacidad.pdf" frameborder="0" width="100%" height="400px">
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <!-- <button type="button" class="btn btn-primary">Save changes</button> -->
+      </div>
+    </div>
+  </div>
+</div>
+<!-- Modal -->
+<div class="modal fade" id="exampleModal3" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Terminos y Condiciones</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <embed src="../../../assets/pdf/Habeas-Data.pdf" frameborder="0" width="100%" height="400px">
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <!-- <button type="button" class="btn btn-primary">Save changes</button> -->
+      </div>
+    </div>
+  </div>
+</div>
