--- a/Front/src/app/landing/pages/quickloan/quickloan.component.html
+++ b/Front/src/app/landing/pages/quickloan/quickloan.component.html
@@ -14,13 +14,13 @@
         <!--Grid column-->
         <div class="col-md-6 col-xl-5 white-text text-center text-md-left mtx">
 
-          <h1 class="display-4 font-weight-bold "> Prestamos Ultra Rapidos</h1>
+          <h1 class="display-4 font-weight-bold "> Prestamos Ultra Rápidos</h1>
           <!-- <button  type="button" (click)="login()" class="btn btn-indigo btn-sm">Ya eres Cliente? -->
             <!-- <i class="fas fa-wallet"></i> -->
           <!-- </button> -->
           <hr class="hr-light">
 
-          <p><strong>Una prestamo pensado para ti, fácil de usar.</strong></p>
+          <p><strong>Un préstamo pensado para ti, fácil de usar.</strong></p>
           <p><strong>Desembolsamos en menos de 24 horas</strong></p>
           <p><strong>Solicitud en minutos y aprobación en segundos</strong></p>
           <p><strong>Sin papeleos ni traslados</strong></p>
@@ -37,16 +37,16 @@
 
           </a>
 
-          <a  type="button" (click)="register()" class="btn btn-indigo btn-lg">Solicita Tu Prestamo
+          <a  type="button" (click)="register()" class="btn btn-indigo btn-lg">Solicita tu préstamo
             <!-- <i class="fas fa-wallet"></i> -->
           </a>
 
 
           <hr>
 
-          <p class="lead mb0">Solicite de<strong>$200.000 hasta $750.000</strong></p>
+          <p class="lead mb0">Solicite de <strong>$200.000 hasta $750.000</strong></p>
           <!-- <span>(Si ya eres cliente nuevo te prestamos solo $200.000 )</span> -->
-          <p>(Plazo De 1 Mes) Extendible Hasta 6 Meses</p>
+          <p>(Plazo De 1 Mes) Extensible hasta 6 meses</p>
 
 
           <!-- <div>
