--- a/Front/src/app/shared/calc-quickloan2/calc-quickloan2.component.html
+++ b/Front/src/app/shared/calc-quickloan2/calc-quickloan2.component.html
@@ -5,10 +5,10 @@
   <div class="card-body">
     <div class="row">
       <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12 mb10">
-        <h2 class="text-white mb20">Obtén Tu Préstamo Hoy</h2>
+        <!-- <h2 class="text-white mb20">Obten Tu Prestamo Hoy</h2> -->
 
         <div class="slider1">
-          <h4 class="text-white">Cuanto Dinero Necesitas?</h4>
+          <h4 class="text-white">El calculo de tu prestamo es:</h4>
 
           <div id="pricipal-slide1"></div>
           <div>
@@ -31,7 +31,7 @@
           </div>
         </div>
         <div class="slider">
-          <h4 class="text-white">Cuando Puedes Pagarlo?</h4>
+          <!-- <h4 class="text-white">Cuando Puedes Pagarlo?</h4> -->
           <div id="totalyear-slide"></div>
           <div>
             <mat-slider
@@ -66,20 +66,20 @@
       </div> -->
       <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 col-3">
         <div class="single-total">
-          <h4 class="text-white lead-cal-small-text">Admin</h4>
+          <h4 class="text-white lead-cal-small-text">Admin </h4>
           <h5 class="text-white" id="tbl_la">$ {{administracion | number: '1.0-0'}}</h5>
         </div>
       </div>
       <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 col-3 ">
         <div class="single-total">
-          <h4 class="text-white lead-cal-small-text">Iva </h4>
+          <h4 class="text-white lead-cal-small-text">Iva  </h4>
           <h5 class="text-white" id="tbl_emi">$ {{iva | number: '1.0-0'}}</h5>
         </div>
       </div>
       <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 col-3">
         <div class="single-total">
-          <h4 class="text-white lead-cal-small-text">Aval</h4>
-          <h5 class="text-white" id="tbl_la">$ {{aval | number: '1.0-0'}}</h5>
+          <h4 class="text-white lead-cal-small-text">Aval <i class="fas fa-info-circle"></i></h4>
+          <h5 class="text-white" id="tbl_la">$ {{aval | number: '1.0-0'}} </h5>
         </div>
       </div>
 
