--- a/Front/src/app/shared/register-quickloan/register-quickloan.component.html
+++ b/Front/src/app/shared/register-quickloan/register-quickloan.component.html
@@ -58,13 +58,13 @@
       <fieldset class="form-check mb-3">
         <input type="checkbox" class="form-check-input" id="checkbox1" formControlName="terminos">
         <a  class="" for="checkbox1" data-toggle="modal" data-target="#exampleModal">
-          Acepto Terminos Y Condiciones
+          Acepto Términos Y Condiciones
         </a>
       </fieldset>
       <fieldset class="form-check mb-3">
         <input type="checkbox" class="form-check-input" id="checkbox2" formControlName="politicas">
         <a  class="" for="checkbox2" data-toggle="modal" data-target="#exampleModal2">
-          Acepto Politicas De Privacidad
+          Acepto Políticas De Privacidad
         </a>
       </fieldset>
       <fieldset class="form-check mb-3">
@@ -87,7 +87,7 @@
 
 
      <div>
-      <button type="button"  (click)="calc(0)" class="mx-3">Atras  <i class="far fa-hand-point-left"></i></button>
+      <button type="button"  (click)="calc(0)" class="mx-3">Atrás  <i class="far fa-hand-point-left"></i></button>
         <button type="submit"  [disabled]="miFormulario.invalid"><i class="fa fa-save"></i> Continuar</button>
 
       </div>
@@ -108,7 +108,7 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Terminos y Condiciones</h5>
+        <h5 class="modal-title" id="exampleModalLabel">Términos y Condiciones</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
@@ -117,7 +117,7 @@
         <embed src="../../../assets/pdf/Terminos Y Condiciones - Lendiup.pdf" frameborder="0" width="100%" height="400px">
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
         <!-- <button type="button" class="btn btn-primary">Save changes</button> -->
       </div>
     </div>
@@ -128,7 +128,7 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Terminos y Condiciones</h5>
+        <h5 class="modal-title" id="exampleModalLabel">Políticas De Privacidad</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
@@ -137,7 +137,7 @@
         <embed src="../../../assets/pdf/Politica-de-privacidad.pdf" frameborder="0" width="100%" height="400px">
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
         <!-- <button type="button" class="btn btn-primary">Save changes</button> -->
       </div>
     </div>
@@ -148,7 +148,7 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Terminos y Condiciones</h5>
+        <h5 class="modal-title" id="exampleModalLabel">Habeas Data</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
@@ -157,7 +157,7 @@
         <embed src="../../../assets/pdf/Habeas-Data.pdf" frameborder="0" width="100%" height="400px">
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
         <!-- <button type="button" class="btn btn-primary">Save changes</button> -->
       </div>
     </div>
