--- a/Front/src/app/dashboard/dashboard.component.html
+++ b/Front/src/app/dashboard/dashboard.component.html
@@ -72,7 +72,7 @@
                     </mat-list-item>
                     <mat-list-item *ngIf="role === 'user'" routerLinkActive="active" routerLink="/dashboard/estadocuenta" class="x aa">
                         <mat-icon mat-list-icon>savings</mat-icon>
-                        <p mat-line> Mi Prestamo </p>
+                        <p mat-line> Mi Préstamo </p>
                     </mat-list-item>
                     <mat-list-item routerLinkActive="active" routerLink="/dashboard/misdatos" class="x aa">
                         <mat-icon mat-list-icon>person</mat-icon>
