--- a/Front/src/app/dashboard/estudio/estudio.component.html
+++ b/Front/src/app/dashboard/estudio/estudio.component.html
@@ -17,9 +17,19 @@
     <div class="borderx p-2">
       <p>{{usuario.personal.tipodoc}}: {{usuario.personal.numdoc}} </p>
       <p>{{usuario.personal.pais}}-{{usuario.personal.departamento}}-{{usuario.personal.ciudad}}-{{usuario.personal.barrio}}</p>
-      <p>Direccion: {{usuario.personal.direccion}} </p>
+      <p>Dirección: {{usuario.personal.direccion}} </p>
       <p>Celular: {{usuario.personal.celular1}} </p>
       <p>Celular Opc: {{usuario.personal.celular2}} </p>
+      <!-- <p *ngIf="usuario.personal.fechaNac">F.Nacimiento: {{usuario.personal.fechaNac |date}} </p>
+      <p *ngIf="usuario.personal.fechaExp">F.Expedición: {{usuario.personal.fechaExp |date}} </p>
+      <p *ngIf="usuario.personal.genero">Genero: {{usuario.personal.genero }} </p>
+      <p *ngIf="usuario.personal.estadocivil">EstadoCivil: {{usuario.personal.estadocivil }} </p>
+      <p *ngIf="usuario.personal.personasacargo">Personas a cargo: {{usuario.personal.personasacargo }} </p>
+      <p *ngIf="usuario.personal.numhijos">Hijos: {{usuario.personal.numhijos }} </p>
+      <p *ngIf="usuario.personal.niveldeestudios">Estudios: {{usuario.personal.niveldeestudios }} </p>
+      <p *ngIf="usuario.personal.estadodeestudios">Estado: {{usuario.personal.estadodeestudios}} </p>
+      <p *ngIf="usuario.personal.tipovivienda">TipoVivienda: {{usuario.personal.tipovivienda}} </p>
+      <p *ngIf="usuario.personal.tiempoenvivienda">TiempoVivienda: {{usuario.personal.tiempoenvivienda }} </p> -->
     </div>
 
     <!-- Datos Banco -->
@@ -27,6 +37,8 @@
       <p><span>Banco: {{usuario.banca.banco}}</span></p>
       <p> <span>Tipo De Cuenta: {{usuario.banca.tipocuenta}}</span></p>
       <p><span>Numero: {{usuario.banca.numcuenta}}</span></p>
+      <p><span *ngIf="usuario.banca.ingresos">Ingresos: {{usuario.banca.ingresos}}</span></p>
+      <p><span *ngIf="usuario.banca.egresos">Egresos: {{usuario.banca.egresos}}</span></p>
     </div>
 
     <!-- Comentarios -->
@@ -35,12 +47,12 @@
     </div>
     <div class="borderx p-2" *ngIf="solicitud.resultado">
       <p><span>Resultados: {{solicitud.resultado}}</span></p>
-      <p><span>Calificacion: {{solicitud.calificacion}}</span></p>
+      <p><span>Calificación: {{solicitud.calificacion}}</span></p>
     </div>
     <!-- Imagenes o PDF Documentos -->
     <div class="borderx p-2" *ngIf="usuario.cedulaPath !== undefined">
       <a class="mr-2 ml-2"
-        [href]="baseUrlN+usuario.cedulaPath" target="_blank">Ver Cedula</a>
+        [href]="baseUrlN+usuario.cedulaPath" target="_blank">Ver Cédula</a>
     </div>
     <div class="borderx p-2" *ngIf="usuario.pasaportePath !== undefined">
       <a class="mr-2 ml-2"
@@ -48,7 +60,7 @@
     </div>
     <div class="borderx p-2" *ngIf="solicitud.matriculaPath !== undefined">
       <a class="mr-2 ml-2"
-        [href]="baseUrlN+solicitud.matriculaPath" target="_blank">Ver Matricula
+        [href]="baseUrlN+solicitud.matriculaPath" target="_blank">Ver Matrícula
         Inmobiliaria</a>
     </div>
     <div class="borderx p-2" *ngIf="solicitud.tarjetavPath !== undefined">
@@ -63,7 +75,7 @@
     </div>
     <div class="borderx p-2" *ngIf="solicitud.CamaraComPath !== undefined">
       <a class="mr-2 ml-2"
-        [href]="baseUrlN+solicitud.CamaraComPath" target="_blank">Ver Camara Y Comercio</a>
+        [href]="baseUrlN+solicitud.CamaraComPath" target="_blank">Ver Cámara Y Comercio</a>
     </div>
     <div class="borderx p-2" *ngIf="solicitud.RutPath !== undefined">
       <a class="mr-2 ml-2"
@@ -109,7 +121,7 @@
 
     <!-- Datos Del Vehiculo -->
     <div class="borderx" *ngIf="solicitud.vehiculo">
-      <p><span class="mb-4">Vehiculo:</span></p>
+      <p><span class="mb-4">Vehículo:</span></p>
       <p><span class="m-2">Tipo: {{solicitud.vehiculo.tipo}}</span></p>
       <p> <span class="m-2"># de Placa: {{solicitud.vehiculo.placa}}</span></p>
       <p><span class="m-2">Modelo: {{solicitud.vehiculo.modelo}}</span></p>
@@ -118,7 +130,7 @@
       <p><span class="m-2">Kilometraje: {{solicitud.vehiculo.kilometraje}}</span></p>
       <p><span class="m-2">Caja: {{solicitud.vehiculo.tipoCaja}}</span></p>
       <p><span class="m-2">Servicio: {{solicitud.vehiculo.tipoPlaca}}</span></p>
-      <p><span class="m-2">Unico Dueño: {{solicitud.vehiculo.unicoDueno}}</span></p>
+      <p><span class="m-2">Único Dueño: {{solicitud.vehiculo.unicoDueno}}</span></p>
     </div>
 
 
@@ -145,9 +157,9 @@
                   {{solicitud.trabajoEmpleado.cargoActual}}</span></p>
               <p> <span class="m-2">Ingreso Mensual:
                   {{solicitud.trabajoEmpleado.ingresoMensual}}</span></p>
-              <p><span class="m-2">Telefono:
+              <p><span class="m-2">Teléfono:
                   {{solicitud.trabajoEmpleado.telefono}}</span></p>
-              <p><span class="m-2">Direccion:
+              <p><span class="m-2">Dirección:
                   {{solicitud.trabajoEmpleado.direccion}}</span></p>
               <p><span class="m-2">Tiempo Trabajando:
                   {{solicitud.trabajoEmpleado.tiempoTrabajando}}</span></p>
@@ -159,9 +171,9 @@
                   {{solicitud.trabajoIndependiente.actividadComercial}}</span></p>
               <p> <span class="m-2">Ingreso Mensual:
                   {{solicitud.trabajoIndependiente.ingresoMensual}}</span></p>
-              <p><span class="m-2">Telefono:
+              <p><span class="m-2">Teléfono:
                   {{solicitud.trabajoIndependiente.telefono}}</span></p>
-              <p><span class="m-2">Direccion:
+              <p><span class="m-2">Dirección:
                   {{solicitud.trabajoIndependiente.direccion}}</span></p>
               <p><span class="m-2">Tiempo Trabajando:
                   {{solicitud.trabajoIndependiente.tiempoTrabajando}}</span></p>
@@ -174,9 +186,9 @@
                   {{solicitud.trabajoEmpresa.actividadComercial}}</span></p>
               <p> <span class="m-2">Ingreso Mensual:
                   {{solicitud.trabajoEmpresa.ingresoMensual}}</span></p>
-              <p><span class="m-2">Telefono:
+              <p><span class="m-2">Teléfono:
                   {{solicitud.trabajoEmpresa.telefono}}</span></p>
-              <p><span class="m-2">Direccion:
+              <p><span class="m-2">Dirección:
                   {{solicitud.trabajoEmpresa.direccion}}</span></p>
             </div>
           </div>
@@ -201,21 +213,21 @@
               <p><span class="mb-4">Referencia 1:</span></p>
               <p><span class="m-2">Nombre:
                   {{solicitud.refFamiliar1.nombre}}</span></p>
-              <p> <span class="m-2">Parentezco:
+              <p> <span class="m-2">Parentesco:
                   {{solicitud.refFamiliar1.parentezco}}</span></p>
               <p><span class="m-2">Celular:
                   {{solicitud.refFamiliar1.celular}}</span></p>
-              <p><span class="m-2">Direccion:
+              <p><span class="m-2">Dirección:
                   {{solicitud.refFamiliar1.direccion}}</span></p>
               <p><span class="mb-4">Referencia Personal:</span></p>
               <p><span class="mb-4">Referencia 2:</span></p>
               <p><span class="m-2">Nombre:
                   {{solicitud.refFamiliar2.nombre}}</span></p>
-              <p> <span class="m-2">Parentezco:
+              <p> <span class="m-2">Parentesco:
                   {{solicitud.refFamiliar2.parentezco}}</span></p>
               <p><span class="m-2">Celular:
                   {{solicitud.refFamiliar2.celular}}</span></p>
-              <p><span class="m-2">Direccion:
+              <p><span class="m-2">Dirección:
                   {{solicitud.refFamiliar2.direccion}}</span></p>
               <!-- <p><span class="mb-4">Referencia 3:</span></p>
               <p><span class="m-2">Nombre:
@@ -256,7 +268,7 @@
                   {{solicitud.refComercial1.empresa}}</span></p>
               <p><span class="m-2">Celular:
                   {{solicitud.refComercial1.celular}}</span></p>
-              <p><span class="m-2">Direccion:
+              <p><span class="m-2">Dirección:
                   {{solicitud.refComercial1.direccion}}</span></p>
               <p><span class="mb-4">Referencia 2:</span></p>
               <p><span class="m-2">Nombre:
@@ -265,7 +277,7 @@
                   {{solicitud.refComercial2.empresa}}</span></p>
               <p><span class="m-2">Celular:
                   {{solicitud.refComercial2.celular}}</span></p>
-              <p><span class="m-2">Direccion:
+              <p><span class="m-2">Dirección:
                   {{solicitud.refComercial2.direccion}}</span></p>
               <p><span class="mb-4">Referencia 3:</span></p>
               <p><span class="m-2">Nombre:
@@ -274,7 +286,7 @@
                   {{solicitud.refComercial3.empresa}}</span></p>
               <p><span class="m-2">Celular:
                   {{solicitud.refComercial3.celular}}</span></p>
-              <p><span class="m-2">Direccion:
+              <p><span class="m-2">Dirección:
                   {{solicitud.refComercial3.direccion}}</span></p>
             </div>
 
@@ -288,7 +300,7 @@
             <button class="btn btn-link btn-block text-left collapsed"
               type="button" data-toggle="collapse" data-target="#collapseFac"
               aria-expanded="false" aria-controls="collapseFac">
-              Fechas De Facturacion
+              Fechas De Facturación
             </button>
           </h2>
         </div>
@@ -322,7 +334,7 @@
                     [@detailExpand]="element == expandedElement ? 'expanded' :
                     'collapsed'">
                     <div class="example-element-diagram">
-                      <div class="example-element-symbol"> Dias De Mora: {{element.diasMora}} </div>
+                      <div class="example-element-symbol"> Días De Mora: {{element.diasMora}} </div>
 
                     </div>
                     <div class="example-element-description">{{element.idRecibo}}<span
@@ -355,7 +367,7 @@
             <button class="btn btn-link btn-block text-left collapsed"
               type="button" data-toggle="collapse" data-target="#collapsedatos"
               aria-expanded="false" aria-controls="collapsedatos">
-              Datos Del Prestamo
+              Cálculos Y Datos Del Préstamo
             </button>
           </h2>
         </div>
@@ -374,7 +386,7 @@
                   number:'0.1-4'}} %</span></p>
               <p><span class="m-2">Valor Solicitado: ${{solicitud.value |
                   number:'0.0-0'}}</span></p>
-              <p><span *ngIf="solicitud.rcomisionAdminHipo> 0" class="m-2">Comision
+              <p><span *ngIf="solicitud.rcomisionAdminHipo> 0" class="m-2">Comisión
                   Admin: -${{solicitud.rcomisionAdminHipo | number:'0.0-0'}}</span></p>
               <p><span *ngIf="solicitud.rregistroHipoteca> 0" class="m-2">Registro
                   Hipoteca: -${{solicitud.rregistroHipoteca | number:'0.0-0'}}</span></p>
@@ -403,9 +415,103 @@
                   number:'0.0-0'}}</span></p>
               <p><span class="m-2">Iva: ${{solicitud.iva | number:'0.0-0'}}</span></p>
               <p><span *ngIf="solicitud.totalCredito> 0" class="m-2">Total
-                  Credito: ${{solicitud.totalCredito | number:'0.0-0'}}</span></p>
+                  Crédito: ${{solicitud.totalCredito | number:'0.0-0'}}</span></p>
               <p><span class="m-2">Valor Cuota Total:
                   ${{solicitud.valorCuotaTotal | number:'0.0-0'}}</span></p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Card Info Referencias QuickLoan -->
+      <div class="card" *ngIf="solicitud.refPersonalQuick.nombre !== ''">
+        <div class="card-header" id="headingTwo">
+          <h2 class="mb-0">
+            <button class="btn btn-link btn-block text-left collapsed"
+              type="button" data-toggle="collapse" data-target="#collapsequickref"
+              aria-expanded="false" aria-controls="collapsequickref">
+              Datos De Referencias Préstamo Ultra Rápido
+            </button>
+          </h2>
+        </div>
+        <div id="collapsequickref" class="collapse" aria-labelledby="headingTwo"
+          data-parent="#accordionExample">
+          <div class="card-body">
+            <div class="borderx">
+              <p>Referencia Personal</p>
+              <p><span class="m-2">Nombre: {{solicitud.refPersonalQuick.nombre}} </span></p>
+              <p><span class="m-2">Apellido: {{solicitud.refPersonalQuick.apellido}} </span></p>
+              <p><span class="m-2">Ciudad: {{solicitud.refPersonalQuick.ciudad}} </span></p>
+              <p><span class="m-2">Celular: {{solicitud.refPersonalQuick.celular}} </span></p>
+              <p>Referencia Familiar</p>
+              <p><span class="m-2">Nombre: {{solicitud.refFamiliarQuick.nombre}}</span></p>
+              <p><span class="m-2">Apellido: {{solicitud.refFamiliarQuick.apellido}}</span></p>
+              <p><span class="m-2">Ciudad: {{solicitud.refFamiliarQuick.ciudad}}</span></p>
+              <p><span class="m-2">Celular: {{solicitud.refFamiliarQuick.celular}}</span></p>
+
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Card Info Trabajo QuickLoan -->
+      <div class="card" *ngIf="solicitud.trabajoQuick.situacionLaboral !== ''">
+        <div class="card-header" id="headingTwo">
+          <h2 class="mb-0">
+            <button class="btn btn-link btn-block text-left collapsed"
+              type="button" data-toggle="collapse" data-target="#collapsequicktrab"
+              aria-expanded="false" aria-controls="collapsequicktrab">
+              Situación Laboral Préstamo Ultra Rápido
+            </button>
+          </h2>
+        </div>
+        <div id="collapsequicktrab" class="collapse" aria-labelledby="headingTwo"
+          data-parent="#accordionExample">
+          <div class="card-body">
+            <div class="borderx">
+
+              <p><span class="m-2">Situación Laboral: {{solicitud.trabajoQuick.situacionLaboral}} </span></p>
+
+              <p><span class="m-2" *ngIf="solicitud.trabajoQuick.actividad !== ''">Actividad: {{solicitud.trabajoQuick.actividad}} </span></p>
+
+              <p><span class="m-2" *ngIf="solicitud.trabajoQuick.actividadcargo !== ''">Cargo: {{solicitud.trabajoQuick.actividadcargo}} </span></p>
+              <p><span class="m-2" *ngIf="solicitud.trabajoQuick.antiguedaddeempresa !== ''">Antigüedad: {{solicitud.trabajoQuick.antiguedaddeempresa }} </span></p>
+
+              <p><span class="m-2" *ngIf="solicitud.trabajoQuick.nombreempresa !== ''">Nombre Empresa: {{solicitud.trabajoQuick.nombreempresa}}</span></p>
+              <p><span class="m-2" *ngIf="solicitud.trabajoQuick.telefonoempresa !== 0">Teléfono Empresa: {{solicitud.trabajoQuick.telefonoempresa}}</span></p>
+              <p><span class="m-2">Uso Del Préstamo: {{solicitud.trabajoQuick.uso}}</span></p>
+
+
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Card Info Trabajo QuickLoan -->
+      <div class="card" *ngIf="usuario.personal.genero">
+        <div class="card-header" id="headingTwo">
+          <h2 class="mb-0">
+            <button class="btn btn-link btn-block text-left collapsed"
+              type="button" data-toggle="collapse" data-target="#collapsequickdataq"
+              aria-expanded="false" aria-controls="collapsequickdataq">
+              Datos Complementarios Préstamo Ultra Rápido
+            </button>
+          </h2>
+        </div>
+        <div id="collapsequickdataq" class="collapse" aria-labelledby="headingTwo"
+          data-parent="#accordionExample">
+          <div class="card-body">
+            <div class="borderx">
+
+              <p *ngIf="usuario.personal.fechaNac">F.Nacimiento: {{usuario.personal.fechaNac |date}} </p>
+              <p *ngIf="usuario.personal.fechaExp">F.Expedición: {{usuario.personal.fechaExp |date}} </p>
+              <p *ngIf="usuario.personal.genero">Genero: {{usuario.personal.genero }} </p>
+              <p *ngIf="usuario.personal.estadocivil">EstadoCivil: {{usuario.personal.estadocivil }} </p>
+              <p *ngIf="usuario.personal.personasacargo">Personas a cargo: {{usuario.personal.personasacargo }} </p>
+              <p *ngIf="usuario.personal.numhijos">Hijos: {{usuario.personal.numhijos }} </p>
+              <p *ngIf="usuario.personal.niveldeestudios">Estudios: {{usuario.personal.niveldeestudios }} </p>
+              <p *ngIf="usuario.personal.estadodeestudios">Estado: {{usuario.personal.estadodeestudios}} </p>
+              <p *ngIf="usuario.personal.tipovivienda">TipoVivienda: {{usuario.personal.tipovivienda}} </p>
+              <p *ngIf="usuario.personal.tiempoenvivienda">TiempoVivienda: {{usuario.personal.tiempoenvivienda }} </p>
+
+
             </div>
           </div>
         </div>
