--- a/Front/src/app/shared/navbar/navbar.component.html
+++ b/Front/src/app/shared/navbar/navbar.component.html
@@ -21,7 +21,7 @@
       <!-- Left -->
       <ul class="navbar-nav mr-auto" >
         <li class="nav-item" routerLinkActive="active">
-          <a class="nav-link" routerLink="/landing/quickloan" data-toggle="collapse" data-target="#navbarSupportedContent">UltraRapido
+          <a class="nav-link" routerLink="/landing/quickloan" data-toggle="collapse" data-target="#navbarSupportedContent">UltraRápido
           </a>
         </li>
         <li class="nav-item" routerLinkActive="active">
@@ -32,16 +32,16 @@
           <a class="nav-link" routerLink="/landing/hipoteca" data-toggle="collapse" data-target="#navbarSupportedContent">Sobre Hipoteca</a>
         </li>
         <li class="nav-item" routerLinkActive="active">
-          <a class="nav-link" routerLink="/landing/vehiculo" data-toggle="collapse" data-target="#navbarSupportedContent">Sobre Vehiculo</a>
+          <a class="nav-link" routerLink="/landing/vehiculo" data-toggle="collapse" data-target="#navbarSupportedContent">Sobre Vehículo</a>
         </li>
         <li class="nav-item" routerLinkActive="active">
-          <a class="nav-link" routerLink="/landing/construccion" data-toggle="collapse" data-target="#navbarSupportedContent">Para Construccion</a>
+          <a class="nav-link" routerLink="/landing/construccion" data-toggle="collapse" data-target="#navbarSupportedContent">Para Construcción</a>
         </li>
 
       </ul>
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-          <a class="nav-link" routerLink="/landing/invierte" data-toggle="collapse" data-target="#navbarSupportedContent"><strong>QUIERES INVIERTIR?</strong></a>
+          <a class="nav-link" routerLink="/landing/invierte" data-toggle="collapse" data-target="#navbarSupportedContent"><strong>QUIERES INVERTIR?</strong></a>
         </li>
       </ul>
       <!-- Right -->
