--- a/Front/src/app/shared/requisito-quickloan/requisito-quickloan.component.html
+++ b/Front/src/app/shared/requisito-quickloan/requisito-quickloan.component.html
@@ -8,25 +8,25 @@
               <form name="">
                 <!-- Heading -->
                 <h3 class="text-light text-center">
-                  <strong>Requisitos Prestamo Personal:</strong>
+                  <strong>Requisitos Préstamo Personal:</strong>
                 </h3>
                 <hr>
 
                 <div>
-                  <p class="text-white"><i class="fas fa-asterisk text-white"></i>  Ser Colombiano Mayor De 18 Años</p>
+                  <p class="text-white"><i class="fas fa-asterisk text-white"></i>  Ser Colombiano mayor de 18 años</p>
                 </div>
                 <div >
-                <p class="text-white"><i class="fas fa-asterisk text-white"></i>  Tener Correo Electrónico</p>
+                <p class="text-white"><i class="fas fa-asterisk text-white"></i>  Tener correo electrónico</p>
                 </div>
                 <div>
-                 <p class="text-white"><i class="fas fa-asterisk text-white"></i>  Tener Una Cuenta Bancaria Activa</p>
+                 <p class="text-white"><i class="fas fa-asterisk text-white"></i>  Tener una cuenta bancaria activa</p>
                 </div>
                 <div>
-                 <p class="text-white"><i class="fas fa-asterisk text-white"></i>  Tener Un Numero Celular Activo</p>
+                 <p class="text-white"><i class="fas fa-asterisk text-white"></i>  Tener un número celular activo</p>
                 </div>
 
                 <div class="text-center">
-                  <button type="button" (click)="calc(0)" class="btn btn-indigo  btn-sm">Calcula Tu Prestamo</button>
+                  <button type="button" (click)="calc(0)" class="btn btn-indigo  btn-sm">Calcula tu préstamo</button>
                   <hr>
                 </div>
 
