--- a/Front/src/app/landing/pages/quick-verify/quick-verify.component.html
+++ b/Front/src/app/landing/pages/quick-verify/quick-verify.component.html
@@ -148,6 +148,7 @@
 
             <div class="col-md-3 ">
               <button type="button" class="btn btn-primary btn-block" (click)="adquirir()">Adquirir</button>
+              <button type="button" class="btn btn-primary btn-block" (click)="ip()">Probar Ip</button>
 
             </div>
             <div class="col-md-3 ">
